--- a/style.css
+++ b/style.css
@@ -10,13 +10,14 @@ canvas{
 
 #item{
     display: inline;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
     margin: 0 auto;
 }
 a{
     text-decoration: none;
     color: blue;
+    font-size: 45px;
 }
 #titulo{
     margin: 0 auto;
