--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body, html{
     height: 100%;
     margin: 0;
+    font-family: 'Sen', sans-serif;
 }
 
 canvas{
@@ -31,4 +32,8 @@ a{
 }
 ul{
     margin: 0 auto;
+}
+
+.selected{
+    background-color: lightgreen;
 }
